# ogoroboty

./: .gitignore  1  Makefile  README.md  main.cpp  omegabot_control.cpp  raspberry_controller.cpp  robot_controller  robot_controller.cpp
firmware/src/main/: main.ino  motor_controller.cpp  motor_controller.h  sensor_manager.cpp  sensor_manager.h  uart_protocol.cpp  uart_protocol.h
robot_video.git/: makefile
robot_video_system/: README.md  build.sh  test_setup.sh
robot_video_system/client/: CMakeLists.txt  network_handler.cpp  network_handler.h  robot_control_client.cpp  robot_operator_interface.pro
robot_video_system/server_video/: CMakeLists.txt  main.cpp  robot_command_server.cpp  robot_command_server.h  video_stream_server.cpp
server/: CMakeLists.txt
server/include/: Protocol.h  RobotController.h
server/src/: Protocol.cpp  RobotController.cpp  main.cpp  test_uart.cpp  uart_bridge.cpp  uart_bridge.h
